test/semant/negative_controls/buggy_progs/non-action.con
concept test
purpose "something"
state
  x : Int
  y : String 
actions
  a() 
principle
  1 = x()
